infra/prod/traefik/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
  # annotations:
  #   load-balancer.hetzner.cloud/location: ash
  #   load-balancer.hetzner.cloud/use-private-ip: "true"
  #   load-balancer.hetzner.cloud/protocol: https
  #   load-balancer.hetzner.cloud/certificate-type: managed
  #   load-balancer.hetzner.cloud/http-managed-certificate-domains: prostor.email
spec:
  # type: LoadBalancer
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-first-segment
  namespace: default
spec:
  stripPrefixRegex:
    regex:
      - "^/[^/]+"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: front
          port: http
    - match: PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: strip-first-segment
      services:
        - name: back
          port: http
